--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Reagan Society</title>
-	<meta http-equiv="refresh" content="0;URL='https://reagansociety.com/'" />
+	<meta http-equiv="refresh" content="0;URL='http://reagansociety.com/'" />
 </head>
 <body></body>
 </html>
