--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Reagan Society</title>
+	<title>Welcome | The Ronald W. Reagan Society of Eureka College</title>
 	<meta http-equiv="refresh" content="0;URL='http://reagansociety.com/'" />
 </head>
 <body></body>
