--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
         <meta name="description" content="The Ronald W. Reagan Society of Eureka College aims to be a national beacon for American opportunity and a living legacy to the values we instilled in Ronald W. Reagan.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Ways to Give | The Ronald W. Reagan Society of Eureka College</title>
+    <title>Events | The Ronald W. Reagan Society of Eureka College</title>
     <!-- <title>Welcome to the Ronald W. Reagan Society of Eureka College</title> -->
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="icon" type="image/png" href="favicon.png" />
@@ -103,48 +103,172 @@
 
 <!-- <a href="#">Contact</a> -->
 
-<div class="row medium-collapse">
-  <div class="small-12 columns full-grid">
-    <img src="img/shenkman-ceremony.jpg"><br><br>
+<div class="contain-to-grid">
+<div class="row">
+  <div class="large-12 columns full-grid">
+    <img src="img/fall-of-the-wall-header.jpg"><br><br>
   </div>
+</div>
 </div>
 
 <div class="row">
-	<div class="large-9 push-3 columns">
-	<h3>Ways to Give</h3>
+<div class="medium-12 columns">
 
-	<p>Reagan Society membership is only the beginning of opportunities to give to the Reagan legacy.  Some members have been richly rewarded in the joy of giving in other areas like: </p>
- <ul>
-  <li>Reagan Leadership Program (Reagan Fellows) </li>
-  <li>Honorary Reagan Fellow Scholarships  (Secretary George Shultz Scholarship, Secretary James A Baker III Scholarship, General P.X. Kelley Scholarship)</li>
-  <li>Capital Improvements  (e.g. Mark R. Shenkman Reagan Research Center)</li>
-  <li>Reagan Museum (operation support and gifts of objects and items)</li>
-  <li>Reagan Peace Garden (maintenance) </li>
-  <li>Planned Giving / Estate Gifts to the Reagan Society</li>
-  <li>Endowed Professorships in Communications, Theater, Political Science, History, Economics, Leadership </li>
-  <li>Visiting Reagan Scholars </li>
-  <li>Sponsorships </li>
-  <li>Sponsorship of Run with Reagan 5K </li>
-  <li>Sponsorship of the Fall of the Wall Event</li>
-  <li>Sponsorship of the Reagan Birthday Dinner</li>
-  <li>Sponsorship of Reagan Memorial Event</li>
-  <li>Sponsorship of Reagan Society Speakers Series </li>
-  <li>Sponsorship of Economic Forum</li>
- </ul>
+<h3>Upcoming Events </h3>
 
-	</div>
-	<div class="large-3 pull-9 columns">
-&nbsp;
-	</div>
+<h5>The Reagan Society is centered on helping each person discover a vision a voice for themselves to learn, serve and lead in the world. We host events on campus and in chapters around the country.</h5>
+
+<div id="event-container full-width">
+
+ <div class="event">
+   <img src="img/event-peace-garden.jpg" alt="Fall of the Wall" />
+   <div class="event-description">
+     <h4 class="centi">Reagan Memorial Ceremony</h4>
+     <h5 class="milli">June 3, 2016</h4>
+     <p class="clearfix">Reagan Peace Garden</p>
+   </div>
+ </div>
+
+<p>Watch for more updated details on the speakers and events. Unless otherwise noted, events are held on the campus of Eureka College.</p>
+<p class="milli">* Members event</p>
 
 </div>
+
+</div>
+</div>
+
+<div class="row">
+<div class="medium-12 columns">
+
+<h3>Recent Events</h3>
+
+<div id="event-container full-width">
+
+ <div class="event">
+   <img src="img/event-ge-theater-web.jpg" alt="Reagan: The Hollywood Years" />
+   <div class="event-description">
+     <h4 class="centi">Reagan: The Hollywood Years*</h4>
+     <h5 class="milli">April 2, 2016</h4>
+     <p class="clearfix">Scottsdale, AZ</p>
+   </div>
+ </div>
+
+ <div class="event">
+   <img src="img/event-oconnor.jpg" alt="Justice Sandra Day O'Connor" />
+   <div class="event-description">
+     <h4 class="centi">Justice Sandra Day O'Connor*</h4>
+     <h5 class="milli">April 4, 2016</h4>
+     <p class="clearfix">Tempe, AZ</p>
+   </div>
+ </div>
+
+ <div class="event">
+   <img src="img/nancy-reagan-eureka.jpg" width="125px" height="150px" alt="Nancy Reagan Memorial Service" />
+   <div class="event-description clearfix">
+    <h4 class="centi">Nancy Reagan Memorial Service</h4>
+    <h5 class="milli">March 9, 2016</h4>
+    <p>A memorial service celebrated the life and legacy of Nancy Reagan, who died Sunday, March 6, 2016, in her Bel-Air, Ca. home. <a href="http://www.eureka.edu/news/nancy-reagan-memorial-service/">Learn more</a>
+
+     <p class="clearfix"><a href="#" data-reveal-id="nancyModal" class="btn">Watch the ceremony</a></p>
+      <div id="nancyModal" class="reveal-modal large" data-reveal aria-labelledby="videoModalTitle" aria-hidden="true" role="dialog">
+       <h2>Nancy Reagan Memorial Service</h2>
+       <div class="flex-video widescreen">
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/Bd7ce6ly_l8" frameborder="0" allowfullscreen></iframe>
+       </div>
+       <a class="close-reveal-modal">&#215;</a>
+      </div>
+   </div>
+</div>
+
+ <div class="event">
+   <img src="img/event-jOwens.jpg" alt="U.S. Competitiveness with Dr. Jim Owens" />
+   <div class="event-description clearfix">
+    <h4 class="centi">U.S. Competitiveness with Dr. Jim Owens</h4>
+    <h5 class="milli">April 23, 2015</h4>
+    <p>Dr. Owens is an economist and former chairman of Caterpillar, Inc.</p>
+    <p class="clearfix"><a href="http://www.eureka.edu/news/jim-owens-economics-lecture/">Learn more</a> </p>
+   </div>
+</div>
+
+<div class="event">
+  <img src="img/event-fall-wall.jpg" alt="Fall of the Wall" />
+  <div class="event-description">
+    <h4 class="centi">Fall of the Wall</h4>
+    <h5 class="milli">Nov 9, 2015</h4>
+     <p class="clearfix"><a href="#" data-reveal-id="FallModal" class="btn">Watch the event</a></p>
+      <div id="FallModal" class="reveal-modal large" data-reveal aria-labelledby="videoModalTitle" aria-hidden="true" role="dialog">
+       <h2>Fall of the Wall Ceremony 2015</h2>
+       <div class="flex-video widescreen">
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/k9hETg60iVI" frameborder="0" allowfullscreen></iframe>
+       </div>
+       <a class="close-reveal-modal">&#215;</a>
+      </div>
+    </p>
+  </div>
+</div>
+
+<div class="event">
+  <img src="img/event-peace-garden.jpg" alt="Reagan Memorial Ceremony" />
+  <div class="event-description">
+    <h4 class="centi">Reagan Memorial Ceremony</h4>
+    <h5 class="milli">June 5, 2015</h4>
+    <p><a href="#" data-reveal-id="memorialModal" class="btn">Watch the event</a></p>
+      <div id="memorialModal" class="reveal-modal large" data-reveal aria-labelledby="videoModalTitle" aria-hidden="true" role="dialog">
+       <h2>2015 Reagan Memorial Ceremony</h2>
+       <div class="flex-video widescreen">
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/EUezsrUgmPY" frameborder="0" allowfullscreen></iframe>
+      </div>
+    <a class="close-reveal-modal">&#215;</a>
+      </div>
+    <p class="clearfix"><a href="http://www.eureka.edu/news/reagan-memorial-ceremony-2015/">Learn more about the 2015 Ceremony</a></p>
+  </div>
+</div>
+
+<div class="event">
+  <img src="img/event-reagan-leadership.jpg" alt="Reagan and the Art of Influence" />
+  <div class="event-description">
+    <h4 class="centi">Reagan and the Art of Influence</h4>
+    <h5 class="milli">November 2015</h4>
+    <p>Forum with Dr. Jamel Santa Cruz Bell and chairman of the board Bill King.</p>
+    <p class="clearfix"><a href="#" data-reveal-id="InfluenceModal" class="btn">Watch the event</a></p>
+      <div id="InfluenceModal" class="reveal-modal large" data-reveal aria-labelledby="videoModalTitle" aria-hidden="true" role="dialog">
+       <h2>Reagan and the Art of Influence</h2>
+       <div class="flex-video widescreen">
+        <iframe width="853" height="480" src="https://www.youtube.com/embed/51M_AbSIrHc" frameborder="0" allowfullscreen></iframe>
+      </div>
+    <a class="close-reveal-modal">&#215;</a>
+      </div>
+  </div>
+</div>
+
+<div class="event">
+  <img src="img/profile-eRollins-web.jpg" alt="Reagan Birthday Dinner" />
+  <div class="event-description">
+    <h4 class="centi">Reagan Birthday Dinner*</h4>
+    <h5 class="milli">February 6, 2016</h4>
+    <p>The Honorable Edward Rollins was the campaign manager for Reagan-Bush '84 re-election campaign. </p>
+    <p class="clearfix"><a href="#" data-reveal-id="birthday16Modal" class="btn">Watch the event</a></p>
+    <div id="birthday16Modal" class="reveal-modal large" data-reveal aria-labelledby="videoModalTitle" aria-hidden="true" role="dialog">
+     <h2>2016 Reagan Society Birthday Dinner</h2>
+     <div class="flex-video widescreen">
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/ohxI_rJv0Zk" frameborder="0" allowfullscreen></iframe>
+    </div>
+  <a class="close-reveal-modal">&#215;</a>
+    </div>
+  </div>
+</div>
+
+</div>
+</div>
+
+</div><!-- end event container -->
 
 <div class="scroll-top-wrapper ">
  <span class="scroll-top-inner">
   <i class="fa fa-2x fa-arrow-circle-o-up"></i>
  </span>
 </div>
-
+</div>
 <!-- Footer -->
 <footer id="footer">
   <div class="row">
